--- a/index.html
+++ b/index.html
@@ -10,11 +10,48 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
+
     <script
       src="https://kit.fontawesome.com/9a8fcee490.js"
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-icicles text-primary"></i> Fro<span
+            class="text-primary"
+            >st</span
+          >
+          Customs
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link px-lg-3 active" href="#">Home</a>
+            <a class="nav-link px-lg-3" href="aboutus.html">About us</a>
+            <a class="nav-link px-lg-3" href="services.html">Services</a>
+            <a class="nav-link px-lg-3" href="projects.html">Projects</a>
+            <a class="nav-link px-lg-3" href="contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
