--- a/index.html
+++ b/index.html
@@ -136,6 +136,67 @@
         </button>
       </div>
     </header>
+    <main>
+      <section class="home-boxes">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-md-4 home-box mb-5 mb-md-0">
+              <i class="fas fa-tools mb-4"></i>
+              <h3>Lorem, ipsum dolor.</h3>
+              <p class="m-0">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <div class="col-md-4 home-box mb-5 mb-md-0">
+              <i class="fas fa-fire mb-4"></i>
+              <h3>Lorem, ipsum dolor.</h3>
+              <p class="m-0">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <div class="col-md-4 home-box mb-5 mb-md-0">
+              <i class="fas fa-cogs mb-4"></i>
+              <h3>Lorem, ipsum dolor.</h3>
+              <p class="m-0">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="home-passion p-5 text-light">
+        <div class="container h-100 d-flex flex-column justify-content-center">
+          <p class="display-4">Cars are our passion</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="hero-shadow"></div>
+        </div>
+      </section>
+      <section class="home-brand py-5">
+        <p class="display-2 text-center pt-5">Frost Customs</p>
+        <div class="container py-5">
+          <div class="row m-0 align-items-center">
+            <div class="col-md-6">
+              <h3>The history of our company</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                fuga iusto perferendis, excepturi saepe amet ullam aperiam
+                pariatur officia mollitia repudiandae maiores, quaerat quidem
+                quibusdam fugit? Ea quas accusantium ullam.
+              </p>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="./img/home-brand.png"
+                alt="green lamborghini Huracan"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
