Added hero section for about-us

--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,35 @@
         </div>
       </div>
     </nav>
-    <h1>o nas</h1>
+    <main>
+      <section class="top-hero aboutus-hero">
+        <p class="top-hero-text text-light">About the company</p>
+        <div class="hero-shadow"></div>
+      </section>
+      <section class="aboutus-top py-6">
+        <div class="container py-5">
+          <p class="display-3 text-uppercase">
+            <i class="fas fa-icicles text-primary"></i> Fro<span
+              class="text-primary"
+              >st</span
+            >
+            Customs
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, quae
+            ullam harum hic iusto deleniti laboriosam, nihil similique eligendi
+            et odit voluptas expedita eum optio porro in perferendis atque modi.
+          </p>
+          <p>
+            Doloremque, possimus, illum laudantium temporibus repellendus dicta
+            sed tempore deserunt eum dignissimos eius ut vero veritatis optio a
+            magnam similique hic quam saepe quo eligendi nam delectus. Neque,
+            quo quia.
+          </p>
+        </div>
+      </section>
+    </main>
+
     <footer class="bg-dark text-light">
       <p class="py-5 mb-0 text-center">
         &copy 2023 Copyright
