--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         id="carouselExampleCaptions"
         class="carousel slide"
         data-bs-ride="carousel"
+        data-bs-interval="4000"
       >
         <div class="carousel-indicators">
           <button
