--- a/aboutus.html
+++ b/aboutus.html
@@ -83,6 +83,171 @@
           </p>
         </div>
       </section>
+      <section class="aboutus-info aboutus-shadow border-top border-bottom">
+        <div class="container">
+          <div class="row m-0 justify-content-center">
+            <div class="col-lg-3 aboutus-text aboutus-text-left">
+              <h3>Our Passion</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Molestiae, eius! Repudiandae, sequi! Voluptatum magni sit amet
+                ipsum nam nisi autem, minus et beatae, laudantium natus
+                temporibus, odio eaque adipisci asperiores.
+              </p>
+            </div>
+            <img
+              src="./img/about/about-2.jpg"
+              alt="Ferrari Engine"
+              class="d-lg-none aboutus-img"
+            />
+            <img
+              src="./img/about/about-2.jpg"
+              alt="Ferrari Engine"
+              class="d-none d-lg-block col-lg-4 aboutus-img"
+            />
+            <div class="col-lg-3 aboutus-text aboutus-text-right">
+              <h3>Our Passion</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Molestiae, eius! Repudiandae, sequi! Voluptatum magni sit amet
+                ipsum nam nisi autem, minus et beatae, laudantium natus
+                temporibus, odio eaque adipisci asperiores.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="aboutus-bottom py-5">
+        <div class="container py-5 text-light">
+          <div class="row row-cols-md-2 row-cols-lg-3">
+            <div class="col-md-6 col-lg-4">
+              <div class="card py-4 mb-3 bg-dark">
+                <div class="row g-0">
+                  <div
+                    class="col-4 d-flex justify-content-center align-items-center"
+                  >
+                    <i class="far fa-building text-light"></i>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body">
+                      <h3 class="cardtitle text-light">Card title</h3>
+                      <p class="card-text text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vero, voluptas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <div class="card py-4 mb-3 bg-primary">
+                <div class="row g-0">
+                  <div
+                    class="col-4 d-flex justify-content-center align-items-center"
+                  >
+                    <i class="fas fa-trophy text-light"></i>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body">
+                      <h3 class="cardtitle text-light">Card title</h3>
+                      <p class="card-text text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vero, voluptas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <div class="card py-4 mb-3 bg-dark">
+                <div class="row g-0">
+                  <div
+                    class="col-4 d-flex justify-content-center align-items-center"
+                  >
+                    <i class="fas fa-tags text-light"></i>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body">
+                      <h3 class="cardtitle text-light">Card title</h3>
+                      <p class="card-text text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vero, voluptas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <div class="card py-4 mb-3 bg-primary">
+                <div class="row g-0">
+                  <div
+                    class="col-4 d-flex justify-content-center align-items-center"
+                  >
+                    <i class="fas fa-gem text-light"></i>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body">
+                      <h3 class="cardtitle text-light">Card title</h3>
+                      <p class="card-text text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vero, voluptas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <div class="card py-4 mb-3 bg-dark">
+                <div class="row g-0">
+                  <div
+                    class="col-4 d-flex justify-content-center align-items-center"
+                  >
+                    <i class="fas fa-credit-card text-light"></i>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body">
+                      <h3 class="cardtitle text-light">Card title</h3>
+                      <p class="card-text text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vero, voluptas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <div class="card py-4 mb-3 bg-primary">
+                <div class="row g-0">
+                  <div
+                    class="col-4 d-flex justify-content-center align-items-center"
+                  >
+                    <i class="far fa-thumbs-up text-light"></i>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body">
+                      <h3 class="cardtitle text-light">Card title</h3>
+                      <p class="card-text text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Vero, voluptas.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="bg-dark text-light">
