prepare html for services section

--- a/services.html
+++ b/services.html
@@ -62,6 +62,59 @@
         <div class="hero-shadow"></div>
       </section>
       <section class="aboutus-top py-6"></section>
+
+      <section class="py-5 service-pricing">
+        <div class="container">
+          <div class="py-5 text-center">
+            <p class="display-3">Our Services</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              eaque voluptates recusandae error quas excepturi eos enim ex
+              corrupti dolor, dicta voluptate exercitationem hic eius, cum
+              itaque dolores laborum veniam.
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <div class="service-hero-box box-one">
+              <p class="h-100 p-3">Mechanical tuning</p>
+              <div class="hero-shadow"></div>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="service-hero-box box-one">
+              <p class="h-100 p-3">Visual tuning</p>
+              <div class="hero-shadow"></div>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="service-hero-box box-one">
+              <p class="h-100 p-3">Car audio</p>
+              <div class="hero-shadow"></div>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="service-hero-box box-one">
+              <p class="h-100 p-3">All-in-one</p>
+              <div class="hero-shadow"></div>
+            </div>
+          </div>
+        </div>
+        <p class="mt-5 text-center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <p class="py-3 text-muted text-center border-top">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur
+          ullam laudantium consequuntur, repudiandae, incidunt exercitationem
+          nostrum beatae velit eligendi vitae labore voluptates corporis.
+          Obcaecati nam, dolores necessitatibus iusto voluptas hic?
+        </p>
+      </section>
     </main>
 
     <footer class="bg-dark text-light">
