finish services section

--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
       </div>
     </nav>
     <main>
-      <section class="top-hero services-hero">
+      <section class="top-hero service-hero">
         <p class="top-hero-text text-light">Services</p>
         <div class="hero-shadow"></div>
       </section>
@@ -85,35 +85,36 @@
           </div>
 
           <div class="col-md-6 mb-4">
-            <div class="service-hero-box box-one">
+            <div class="service-hero-box box-two">
               <p class="h-100 p-3">Visual tuning</p>
               <div class="hero-shadow"></div>
             </div>
           </div>
 
           <div class="col-md-6 mb-4">
-            <div class="service-hero-box box-one">
+            <div class="service-hero-box box-three">
               <p class="h-100 p-3">Car audio</p>
               <div class="hero-shadow"></div>
             </div>
           </div>
 
           <div class="col-md-6 mb-4">
-            <div class="service-hero-box box-one">
+            <div class="service-hero-box box-four">
               <p class="h-100 p-3">All-in-one</p>
               <div class="hero-shadow"></div>
             </div>
           </div>
+
+          <p class="mt-5 text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <p class="py-3 text-muted text-center border-top">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur
+            ullam laudantium consequuntur, repudiandae, incidunt exercitationem
+            nostrum beatae velit eligendi vitae labore voluptates corporis.
+            Obcaecati nam, dolores necessitatibus iusto voluptas hic?
+          </p>
         </div>
-        <p class="mt-5 text-center">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <p class="py-3 text-muted text-center border-top">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur
-          ullam laudantium consequuntur, repudiandae, incidunt exercitationem
-          nostrum beatae velit eligendi vitae labore voluptates corporis.
-          Obcaecati nam, dolores necessitatibus iusto voluptas hic?
-        </p>
       </section>
     </main>
 
